Upgraded ES version to 8.1.50